# ChartCore

./: CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/include/: D2dRenderer.hh  GdiRenderer.hh  GdiplusManager.hh  IRenderer.hh  RendererContext.hh  bindings.hh
Core/src/: bindings.cc
Test/: CMakeLists.txt  app.cc
